--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/f28d7b19a1.js" crossorigin="anonymous"></script>
+    <title>HW 5 Under Construction</title>
 </head>
 <body>
-    
+    <header>
+        <nav>HOME</nav>
+    </header>
+    <div class="construction">
+        <h1>UNDER</h1>
+        <h1>CONSTRUCTION</h1> 
+        <p>SITE NEARLY READY</p>      
+    </div>
+    <main>
+            <div class="box">
+                <div class="box2"></div>
+            </div>
+        <div class="percent">
+            <p>0%</p>
+            <p>100%</p>
+        </div>
+    </main>
+    <div class="notify">
+        <button>Notify Me!</button>
+    </div>
+    <div class="contact">
+        <div class="circle">
+            <i class="fa-brands fa-github"></i>
+        </div>
+        <div class="circle">
+            <i class="fa-brands fa-linkedin"></i>
+        </div>
+        <div class="circle">
+            <i class="fa-brands fa-facebook"></i>
+        </div>
+        <div class="circle"> 
+            <i class="fa-brands fa-x-twitter"></i>
+        </div>
+    </div>
+    <hr>
+    <footer>
+        <p>&#64;2023 by Under Construction.</p>
+    </footer>
 </body>
 </html>
